# kasino

./: .gitignore  CMakeLists.txt  README.md  Web.bat  Web.sh  Win.bat  build.sh  compile_commands.json  run.bat  run.sh  runWeb.bat  runWeb.sh
.cache/clangd/index/: App.cpp.784C4E7EF7116F8F.idx  App.cpp.E3E43C694156DB76.idx  App.h.CF39394E9D9B3B18.idx  Event.h.680509E432F9E1B1.idx  EventBus.cpp.D3A77CEB8CDBA27B.idx  EventBus.h.4C695F1002159EF0.idx  Factory.cpp.3750D630DF462EA3.idx  Factory.h.E3DA20D6AC77C519.idx  GLDevice.cpp.4F7BFB9180124758.idx  GLDevice.h.D8F98C45C3FF1E55.idx  GlfwWindow.cpp.1455D1F419B437BC.idx  GlfwWindow.h.33AEC3029FE688A5.idx  IGraphicsDevice.h.AFD248553CD46F23.idx  IWindow.h.EC1EFCEF13024F6F.idx  InputSystem.cpp.562EBF2AC2230C82.idx  InputSystem.h.AC050868C38EB48D.idx  Key.h.5E00CC0DB13EDA73.idx  Mouse.h.61A0AD1E080FD3A7.idx  Touch.h.39CCE88E01E78DAF.idx  Types.h.F6AD96BB339EDBBF.idx  WindowDesc.h.985C2A2BB363D558.idx  WindowFactory.cpp.1640C343EB42F582.idx  WindowFactory.h.100DB1C078DD8DBF.idx  glad.c.6B75EBD080D21067.idx  glad.h.7B44D2E68F1330D0.idx  khrplatform.h.3716B8E065DFEE4F.idx  main.cpp.24762C07AC87A506.idx
Data/Shaders/: basic.glsl  basicEs.glsl
Resources/web/: shell_kasino.html
include/Kasino/: Card.h  Deck.h  GameLogic.h  GameState.h  KasinoGame.h  Move.h  Scoring.h
include/android/: AndroidWindow.h
include/app/: App.h  Game.h
include/audio/: AudioAPI.h  IAudioBuffer.h  IAudioDevice.h  IAudioSource.h  SoundSystem.h
include/audio/miniaudio/: MiniaudioDevice.h
include/audio/null/: NullAudioDevice.h
include/core/: Factory.h  FactoryDesc.h  Log.h  Types.h
include/events/: Event.h  EventBus.h
include/gfx/: Camera2D.h  IBuffer.h  IGraphicsDevice.h  IShader.h  ITexture2D.h  IVertexArray.h  Render2D.h  RenderCommand.h  RendererAPI.h  ViewportUtil.h
include/gfx/glad/: GLBuffer.h  GLDevice.h  GLRendererAPI.h  GLShader.h  GLTexture2D.h  GLVertexArray.h
include/input/: InputSystem.h  Key.h  Mouse.h  Touch.h
include/ui/: UISystem.h
include/window/: IWindow.h  WindowDesc.h  WindowFactory.h
include/window/glfw/: GlfwWindow.h
src/: main.cpp  testing.cpp
src/Kasino/: GameLogic.cpp  KasinoGame.cpp  KasinoGame.h
src/app/: App.cpp
src/engine/: App.cpp  Factory.cpp  Log.cpp
src/engine/app/: Game.cpp
src/engine/audio/: SoundSystem.cpp
src/engine/gfx/: Camera2D.cpp  Render2D.cpp  RenderCommand.cpp
src/engine/input/: InputSystem.cpp
src/engine/ui/: UISystem.cpp
src/events/: EventBus.cpp
src/gfx/glad/: GLBuffer.cpp  GLDevice.cpp  GLShader.cpp  GLVertexArray.cpp
src/glad/: GLBuffer.cpp  GLDevice.cpp  GLRendererAPI.cpp  GLShader.cpp  GLTexture2D.cpp
src/miniaudio/: MiniaudioDevice.cpp
src/window/: WindowFactory.cpp
src/window/android/: AndroidWindow.cpp
src/window/glfw/: GlfwWindow.cpp
